# ZSMILES

./: .gitignore  CMakeLists.txt  README.md
data/: drugs.smi  drugs.zsmi  test.zsmi
libsmiles/: CMakeLists.txt
libsmiles/include/: compression_dictionary.hpp  compressor.hpp  compressor_implementations.hpp  compressor_interface.hpp  compressor_type.hpp
libsmiles/include/cpu/: compressor.hpp  dictionary.hpp
libsmiles/include/cuda/: compressor.cuh  dictionary.cuh  node.cuh
libsmiles/include/gpu/: dictionary.hpp  knobs.hpp  node.hpp
libsmiles/include/hip/: hip_helper.hpp
libsmiles/include/zsmiles/: compressor_implementations.hpp  dictionary_graph.hpp  likwid_utils.hpp  ring.hpp
libsmiles/include/zsmiles/cpu/: dictionary.hpp
libsmiles/include/zsmiles/cuda/: compressor.cuh  nvidia_helper.cuh
libsmiles/include/zsmiles/gpu/: dictionary.hpp  knobs.hpp  node.hpp
libsmiles/include/zsmiles/hip/: compressor.hpp  hip_helper.hpp
libsmiles/src/: compression_dictionary.cpp  compressor.cpp
libsmiles/src/cpu/: compressor.cpp  dictionary.cpp
libsmiles/src/cuda/: compressor.cu
libsmiles/src/hip/: compressor.cpp
smiles-zip/: CMakeLists.txt
smiles-zip/src/: main.cpp
smiles_dict/: dict.dct  gadio_dict.dct  gdb17.dct  generate_cpu_dict.py  generate_dict.py  generate_gpu_code.py  generate_gpu_dict.py
test/: CMakeLists.txt  tests.py
